--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "http": "0.0.0",
     "if-env": "^1.0.4",
     "mongoose": "^5.0.17",
+    "react-google-charts": "^2.0.16",
     "request": "^2.87.0"
   }
 }
