--- a/client/package.json
+++ b/client/package.json
@@ -13,7 +13,8 @@
     "react-google-charts": "^2.0.16",
     "react-router-dom": "^4.1.2",
     "react-scripts": "1.0.14",
-    "react-svg-donut-chart": "^1.0.0"
+    "react-svg-donut-chart": "^1.0.0",
+    "reactjs-popup": "^1.1.1"
   },
   "scripts": {
     "start": "react-scripts start",
