--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "if-env": "^1.0.4",
     "mongoose": "^5.0.17",
     "react-google-charts": "^2.0.16",
+    "reactjs-popup": "^1.1.1",
     "request": "^2.87.0"
   }
 }
