--- a/package.json
+++ b/package.json
@@ -30,8 +30,8 @@
     "http": "0.0.0",
     "if-env": "^1.0.4",
     "mongoose": "^5.0.17",
-    "react-google-charts": "^2.0.16",
-    "reactjs-popup": "^1.1.1",
+    "react-simple-tooltip": "^2.3.2",
+    "react-svg-bar-chart": "^1.0.0",
     "request": "^2.87.0"
   }
 }
