--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "http": "0.0.0",
     "if-env": "^1.0.4",
     "mongoose": "^5.0.17",
+    "query-string": "^6.1.0",
     "react-simple-tooltip": "^2.3.2",
     "react-svg-bar-chart": "^1.0.0",
     "request": "^2.87.0"
